<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.casob.phonesnothot.MainActivity">

    <ImageView
        android:id="@+id/wondering_teen"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="@dimen/standard_parent_margin"
        android:layout_marginTop="@dimen/standard_parent_margin"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/wonderingteen" />

    <TextView
        android:id="@+id/teen_question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/teen_horizontal_margin"
        android:layout_marginStart="@dimen/teen_horizontal_margin"
        android:layout_marginTop="@dimen/teen_top_margin"
        android:text="@string/question_how_hot"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/teen_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.55"
        app:layout_constraintStart_toEndOf="@+id/wondering_teen"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/big_shaq"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="@dimen/standard_parent_margin"
        android:layout_marginTop="@dimen/shaq_image_margin_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teen_question"
        app:srcCompat="@drawable/bigshaq" />

    <TextView
        android:id="@+id/big_shaq_answer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/shaq_text_margin_end"
        android:layout_marginTop="@dimen/shaq_text_margin_top"
        android:text="@string/phone_never_hot"
        android:textColor="@color/colorPrimaryText"
        android:textSize="@dimen/shaq_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@+id/big_shaq"
        app:layout_constraintTop_toBottomOf="@+id/teen_question" />

    <Button
        android:id="@+id/ask_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginEnd="@dimen/button_margin"
        android:backgroundTint="@color/colorSecondaryAccent"
        android:text="@string/ask_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/save_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/button_margin"
        android:layout_marginStart="@dimen/button_margin"
        android:backgroundTint="@color/colorSecondaryAccent"
        android:text="@string/save_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/temp_margin"
        android:layout_marginEnd="@dimen/temp_margin"
        android:layout_marginStart="@dimen/temp_margin"
        android:layout_marginTop="@dimen/temp_margin"
        android:text="@string/standard_temp"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/temp_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.8" />
</android.support.constraint.ConstraintLayout>
